<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:layout_marginTop="@dimen/large_container_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/demoPrintIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/std_container_margin"
                android:src="@drawable/icon_price_tag_blue"
                android:contentDescription="@string/print_demo_icon_content" />

            <TextView
                android:id="@+id/printDemoHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shelf_label_demo_header"
                android:textSize="@dimen/print_demo_info_header"
                android:textStyle="bold" />

        </LinearLayout>

        <include
            layout="@layout/demo_file_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/large_container_margin"
            android:layout_marginRight="@dimen/large_container_margin" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/large_container_margin"
        android:text="@string/description"
        android:textAllCaps="true"
        android:textColor="@color/zebra_blue"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/zebra_blue" />

    <TextView
        android:id="@+id/demoDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/large_container_margin"
        android:layout_marginLeft="@dimen/extra_large_container_margin"
        android:layout_marginRight="@dimen/extra_large_container_margin"
        android:layout_marginTop="@dimen/large_container_margin"
        android:text="@string/demo_shelf_label_description"
        android:textColor="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="@dimen/large_container_margin"
            android:layout_weight="1"
            android:text="@string/demo_variables"
            android:textAllCaps="true"
            android:textColor="@color/zebra_blue"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/refreshButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:background="?android:attr/selectableItemBackground"
            android:src="@drawable/icon_refresh_blue"
            android:contentDescription="@string/refresh_variable_content" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/zebra_blue" />

</LinearLayout>