<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/resultItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/printStatusIcon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/large_container_margin"
        android:src="@drawable/icon_error_dash_red"
        android:visibility="gone"
        android:contentDescription="@string/print_result_status_icon_content" />

    <ProgressBar
        android:id="@+id/progressSpinner"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/large_container_margin"
        android:indeterminate="true" />

    <TextView
        android:id="@+id/statusText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/large_container_margin"
        android:layout_weight="1"
        android:text="@string/sending_data" />

    <ImageView
        android:id="@+id/printResultChevron"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="center_vertical|right"
        android:layout_marginRight="@dimen/std_container_margin"
        android:src="@drawable/icon_chevron_up_gray"
        android:contentDescription="@string/print_result_chevron_content" />

</LinearLayout>
