<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/collapsablePrintStatus"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/large_container_margin"
    android:layout_marginRight="@dimen/large_container_margin"
    android:background="@color/item_detail_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_container_margin"
        android:layout_marginLeft="@dimen/large_container_margin"
        android:layout_marginTop="@dimen/std_container_margin"
        android:text="@string/sent"
        android:textColor="@color/zebra_blue"
        android:textSize="12sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/std_container_margin"
        android:layout_marginRight="@dimen/std_container_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/intentSentDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/std_container_margin"
            android:layout_marginRight="@dimen/large_container_margin"
            android:text="@string/intent_name"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/std_container_margin"
        android:layout_marginLeft="@dimen/std_container_margin"
        android:layout_marginRight="@dimen/std_container_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/intentSentVarData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/std_container_margin"
            android:layout_marginRight="@dimen/large_container_margin"
            android:text="@string/intent_var_data"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_container_margin"
        android:layout_marginLeft="@dimen/large_container_margin"
        android:text="@string/response"
        android:textColor="@color/zebra_blue"
        android:textSize="12sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/std_container_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/std_container_margin"
            android:text="@string/result_code"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/intentResultCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_container_margin"
            android:text="-1"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/intentResultCodeDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_container_margin"
            android:text="()"
            android:textSize="12sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/std_container_margin"
        android:layout_marginLeft="@dimen/std_container_margin"
        android:layout_marginRight="@dimen/std_container_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/intentResultMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/std_container_margin"
            android:layout_marginRight="@dimen/large_container_margin"
            android:text="@string/intent_result_error_message"
            android:textSize="12sp" />

    </LinearLayout>
</LinearLayout>